# experiment-lab

./: README.md  README.zh-CN.md  SKILL.md  pyproject.toml
scripts/: lab_queue.py
src/experiment_lab/: SKILL.md  __init__.py  __main__.py  lab_queue.py  resources.py  skill_installer.py
