[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-lab"
version = "0.1.0"
description = "Utilities and bundled Codex skill files for managing experiment workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Experiment Lab maintainers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
lab-queue = "experiment_lab.lab_queue:main"
experiment-lab-paths = "experiment_lab.resources:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
experiment_lab = ["SKILL.md"]
